clusters/dagda/apps/glance/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance
  namespace: glance
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - glance.aiectomy.xyz
  rules:
    - backendRefs:
        - name: glance
          port: 8080
